Dummy_Package_for_scratch_org/main/default/objects/User_Story_Commit__c/fields/Snapshot_Commit__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Commit__c</fullName>
    <label>Snapshot Commit</label>
    <referenceTo>Git_Org_Commit__c</referenceTo>
    <relationshipLabel>User Story Commits</relationshipLabel>
    <relationshipName>User_Story_Commits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>