Dummy_Package_for_scratch_org/main/default/objects/User_Story_Commit__c/fields/View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>View_in_Git__c</fullName>
    <formula>HYPERLINK(
	IF(
	AND(NOT(ISNULL(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c)),	Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c +  Snapshot_Commit__r.Commit_Id__c,
			IF(
				CONTAINS(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
				SUBSTITUTE(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,Snapshot_Commit__r.Commit_Id__c),
				Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c + Snapshot_Commit__r.Commit_Id__c
			)
		),
	&apos;&apos;), 
	Snapshot_Commit__r.Commit_Id__c
)</formula>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>